<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <parent>
    <groupId>org.tvbrowser</groupId>
    <artifactId>tvbrowser-plugins</artifactId>
    <version>0.1-SNAPSHOT</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <artifactId>tvbrowser-plugins-imdb</artifactId>
  <name>IMDb Plugin</name>
  <developers>
    <developer>
      <id>bodo</id>
      <email>bodo@tvbrowser.org</email>
    </developer>
  </developers>
  <licenses>
     <license>
      <name>GPL v3.0</name>
      <url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
      <distribution>manual</distribution>
     </license>
  </licenses>   
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
       <plugin>
          <artifactId>maven-assembly-plugin</artifactId>
          <configuration>
              <descriptorRefs>
                  <descriptorRef>jar-with-dependencies</descriptorRef>
              </descriptorRefs>
              <finalName>ImdbPlugin</finalName>
              <appendAssemblyId>false</appendAssemblyId>
              <attach>false</attach>
          </configuration>
          <executions>
           <execution>
                  <id>make-assembly</id> <!-- this is used for inheritance merges -->
                  <phase>package</phase> <!-- append to the packaging phase. -->
                  <goals>
                      <goal>single</goal> <!-- goals == mojos -->
                  </goals>
            </execution>
          </executions>
        </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <groupId>org.tvbrowser</groupId>
      <artifactId>tvbrowser</artifactId>
      <version>4.0.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.lucene</groupId>
      <artifactId>lucene-core</artifactId>
      <version>8.0.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.lucene</groupId>
      <artifactId>lucene-analyzers-common</artifactId>
      <version>8.0.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.lucene</groupId>
      <artifactId>lucene-queryparser</artifactId>
      <version>8.0.0</version>
    </dependency>
  </dependencies>
</project>
